--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -32,7 +32,7 @@
 			<h2 id="about">About</h2>
 			<p>Directed/written/composed by Leyna Marika P.</p>
 
-			<p>SONG is poem, a pocket of time, a wish, a lie, a piece of you, a fragment of me, or a way to become we.    SONG is a movement-based opera inspired by traditional Japanese theater performed to connect to the dead and departed.  Taking place in a mysteriously mechanical space ruled by timelessness and music, a game unfolds guiding the performers in creating fragmented self-portraits as they express the difficulties around social life, the sense of self, and a longing to escape it all.  SONG illuminates the thread between life, death, and music in a musically interactive landscape with seven distinct performers.</p> 
+			<p>SONG is poem, a pocket of time, a wish, a lie, a piece of you, a fragment of me, or a way to become we. SONG is a movement-based opera inspired by traditional Japanese theater performed to connect to the dead and departed.  Taking place in a mysteriously mechanical space ruled by timelessness and music, a game unfolds guiding the performers in creating fragmented self-portraits as they express the difficulties around social life, the sense of self, and a longing to escape it all. SONG illuminates the thread between life, death, and music in a musically interactive landscape with seven distinct performers.</p> 
 
 			<p>SONG features Kamala Sankram, Ava Mendoza, Megan Stern, Chikako Bando, Christian Dautreseme, Kaoru Watanabe, and Leyna Marika P., with visual design/set by Jerry Smith, Jr., lighting design by Ayumu Poe Saegusa, costumes by Irina Arnaut, and contributing texts by Laily Longsoldier.</p>
 			</div>
@@ -66,7 +66,7 @@
 
 				<p>The six evening-length pieces Leyna wrote and directed have been performed internationally in Europe, Japan and the United States.</p>
 
-				<p>As a musician and violinist, she has collaborated with a wide range of artists in various disciplines (Eric Ting, Clarinda Mac Low,  J.G.Thirwell, Nels Cline (Wilco), Geraldine Fibbers and many others), leading to performances of original and collaborative work at venues/festivals such as; Unlimited Festival (Austria), HAU (Berlin), Frascati/Gasthuis (Holland), International House (Japan), Danse l’Afrique Danse! Festival (Paris/Tunisia), All Tomorrow's Parties, BAM, UNESCO, DTW, BRICK, Danspace project, Issue Project Room, HERE, The Stone, and many others.</p>
+				<p>As a musician and violinist, she has collaborated with a wide range of artists in various disciplines (Eric Ting, Clarinda Mac Low,  J.G.Thirwell, Nels Cline (Wilco), Geraldine Fibbers and many others), leading to performances of original and collaborative work at venues/festivals such as; Unlimited Festival (Austria), HAU (Berlin), Frascati/Gasthuis (Holland), International House (Japan), Danse l'Afrique Danse! Festival (Paris/Tunisia), All Tomorrow's Parties, BAM, UNESCO, DTW, BRICK, Danspace project, Issue Project Room, HERE, The Stone, and many others.</p>
 
 				<p>Leyna has researched traditional forms of music in West Africa and Japan with the support from various foundations (Arts International, Japan/Us Friendship Commission and others). She holds an MFA in Sound/Music from Bard College, MA in Theater and Dance studies from DasArts, Amsterdam, and studied violin at the Prague Academy of Music. <a href="http://www.leynamarikapapach.com">http://www.leynamarikapapach.com</a></p>
 			</section>
