--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -103,8 +103,8 @@
 
 		<footer>
 			<div id="footer">
-				<p>Copyright: 2016 Song Opera</p>
-				<p><a href="#">Go to top</a></p>
+				<p class="copyright">Copyright: 2016 Song Opera</p>
+				<p class="copyright"><a href="#">Go to top</a></p>
 			</div>
 		</footer>
 
