--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -43,7 +43,7 @@
 		</section>
 
 		<main>
-			<section class="director">
+			<section class="performers">
 				<img src="images/cast/1.png" class="cast" title="Leyna Marika Papach" alt="Leyna Marika Papach (writer/ composer / director)">
 				<h2>Leyna Marika Papach<br>(writer/ composer / director)</h2>
 				<hr>
@@ -53,46 +53,46 @@
 			</section>
 			<section class="performers">
 				<h1 id="bios">Performers:</h1>
-				<section>
+				<section class="performers">
 					<img src="images/cast/2.png" class="cast" title="Kamala Sakaram" alt="Kamala Sakaram">
 					<h2>Kamala Sankaram</h2>
 					<hr>
 					<p>Praised as "strikingly original" (NY Times), Kamala Sankaram has received commissions from Beth Morrison Projects, HERE Arts Center, Opera on Tap, and Anthony Braxton's Tri-Centric Orchestra among others. <!-- She is the recipient of a Jonathan Larson Award from the American Theater Wing, and has received grants from the National Endowment for the Arts, MAP Fund, Opera America, Foundation for Contemporary Arts, Meet the Composer, the Augustine Foundation, the Anna Sosenko Trust and the Asian Women's Giving Circle.  Residencies and fellowships include the MacDowell Colony, the Watermill Center, the Citezens, HERE Arts Center, CAP21, Con Edison/Exploring the Metropolis, the Hermitage and American Lyric Theater.  As a Resident of HERE Arts Center, Kamala created Miranda, a streampunk murder mystery, which was the winner of the New York Innovative Theater Award for Outstanding Production of a Musical. --> THUMBPRINT, her second opera (written in collaboration with playwrite Susan Yankowitz) premiered in the 2014 Prototype Festival and featured on NPR's Weekend Edition, Agence French Presse, and over 25 media outlets around the worlds. THUMBPRINT will best be produced as part of the 2016/17 season at LA Opera.</p>
 					<p>As a performer, Kamala has been hailed as "an impassioned soprano with blazing high notes" (Wall Street Journal). She has performed with and premiered pieces by Anthony Braxton, Beth Morrison Projects, the Phillip Glass Ensemble, the Wooster Group, Anti-Social Music and Petr Kotik, among others.  She is the frontwoman for the band, Bombay Rickey, whose debut album was nominated for the 2015 Independent Music Award. <a href="http://kamalasankaram.com">http://kamalasankaram.com</a></p>
 				</section>
-				<section>
+				<section class="performers">
 					<img src="images/cast/3.png" class="cast" title="Kaoru Watanbe" alt="Kaoru Watanbe">
 					<h2>Kaoru Watanbe</h2>
 					<hr>
 					<p>Kaoru Watanabe is a Brooklyn-based composer and musician, specializing on the Japanese taiko drum and shinobue flutes. He has spent decades artfully blending the sounds of Japanese instruments with those from around the world, collaborating with such artists as National Living Treasure Bando Tamasaburo, Jason Moran, So Percussion, Adam Rudolph, Kenny Endo, Stefon Harris, Kiyohiko Semba, Alicia Hall Moran, Tatsuya Nakatani, TaikOz, Yo Yo Ma's Silk Road Ensemble, Imani Uzuri, calligrapher Kakinuma Koji, visual artist Simone Leigh and has performed his compositions at such prestigious venues as Carnegie Hall, Lincoln Center, The Kennedy Center, The Metropolitan Museum of Art, Whitney Museum, Kabukiza, Minamiza, Blue Note NYC and has performed in all 47 prefectures in Japan. <a href="http://www.watanabekaoru.com">http://www.watanabekaoru.com</a></p>
 				</section>
-				<section>
+				<section class="performers">
 					<img src="images/cast/4.png" class="cast" title="Ava Mendoza" alt="Ava Mendoza">
 					<h2>Ava Mendoza</h2>
 					<hr>
 					<p>My name is AVA MENDOZA. I play guitars and stompboxes and write music. Currently I'm based out of Brooklyn, NY, having recently relocated here from Oakland, CA. I have played guitar for most of my life and been active for the last decade playing my own music and in many different groups. <!-- In any context I try to bring expressivity, energy and a wide sonic range to the music I play. I've toured throughout the U.S. and Europe and recorded or performed with a broad spectrum of musicians including Carla Bozulich, Fred Frith, Nels Cline, To Live and Shave in LA, Jamaaladeen Tacuma, Butch Morris, Weasel Walter,  ROVA Sax Quartet, Tune-Yards, and more. I've played on recordings released by labels Weird Forest, Tzadik, Clean Feed, NotTwo, ugEXPLODE, Resipiscent, New Atlantis, and others. --></p>
 					<p>Friendly critics have called me "Oakland's avant-jazz virtuoso" (Village Voice), "a versatile and virtuosic guitarist" (The San Francisco Film Society), "a wizard on a semi-circle of effects pedals, but... equally adept with FX-less technique," (Lars Gotrich, A Blog Supreme/NPR Jazz). <a href="http://www.avamendozamusic.com">http://www.avamendozamusic.com</a></p>
 				</section>
-				<section>
+				<section class="performers">
 					<img src="images/cast/5.png" class="cast" title="Megan Stern" alt="Megan Stern">
 					<h2>Megan Stern</h2>
 					<hr>
 					<p>Theatre credits include Peter and the Starcatcher (1st National Broadway Tour), Ludic Proxy (PlayCo), Be the Death of Me (The Civilians), Raptured (PlayCo), The Material World (Dixon Place, TimeOutNY "Best of 2012"), Straight Up Vampire (Joe's pub, Ars Nova, Philly Fringe), The Tempest (Porpentine Theater Co.), The London Merchant (Storm Theatre, NYTimes Critics Pick), The Gay Ivy (Dixon Place), Power Burn 3 (The Brick), Wasp Cove (Comix). TV: Difficult People, Forever.</p>
 				</section>
-				<section>
+				<section class="performers">
 					<img src="images/cast/6.png" class="cast" title="Christian Dautresme" alt="Christian Dautresme">
 					<h2>Christian Dautresme</h2>
 					<hr>
 					<p>Christian Dautresme is a French born performance artist and musician. Mr. Dautresme is a founding member of the oddball performance and musical group- SUGARLIFE- serving up hilarious weirdo, off-kilter stagings  with live musical accompaniment as would be conducted and staged by Jack Smith, John Waters, David Lynch, Marlene Dietrich and the Residents.</p>
 					<p>Mr. Dautresme has a knack for making you feel at home in a world of psychological discomfort, finding humor in his anguish-ridden narratives. His performances incorporate elements of Butoh, Camp Theater, theatrical improv, soundscape art and installation art.  He is currently a student of Wynn Handman, founder of the American place theater.</p>
 				</section>
-				<section>
+				<section class="performers">
 					<img src="images/cast/7.png" class="cast" title="Chikako Bando" alt="Chikako Bando">
 					<h2>Chikako Bando</h2>
 					<hr>
 					<p>Born n 1967, Chikako Bando studied linguistics at University while becoming active in Theater. She discovered Bali dance which led to her interest in Butoh dance, and she continued intensive studies with Masumi Yurabe and Akira Kasai. <!-- In 1998, she founded a butoh dance company called Hanaarashi with Yumiko Nii and On Furukara. The company created a body of work heavily influenced by a butoh-informed bady sense, addressing fundamental issues surrounding the subject of women-hood with a rigorous and humorous approach. --> Hanaarashi has performed in Japan, Philipines, Korea, Taiwan, Thailand, Australia, Madagacar and France. As an educator, Chikako has continued to give butoh workshops and in 2005, bagan working with visually/intellectually challenged people, making dance pieces with them. She has given workshops for disabled children and adults both in Paris and in Madagascar. <!-- Chikako's theme for research is in the possibility of the body in the state of dance. She wishes to create a space where people can meet through dance and communications of the body. --> She resides in Osaka, Japan. <a href="http://chikakobando.jimdo.com">http://chikakobando.jimdo.com</a></p>
 				</section>
-				<section>
+				<section class="performers">
 					<img src="images/cast/8.png" class="cast" title="jerry Smith Jr." alt="jerry Smith Jr.">
 					<h2>Jerry Smith Jr. (visual design)</h2>
 					<hr>
